Update computer and python lesson

--- a/ML/xuetangx/computer_and_python_programing/L1计算机科学简介.ipynb
+++ b/ML/xuetangx/computer_and_python_programing/L1计算机科学简介.ipynb
@@ -29,19 +29,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.000012953048684"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def get_square_root(y):\n",
     "    g = y/2.0\n",
     "    while 1:\n",
     "        if abs(g*g-y)<=0.001:\n",
     "            return g\n",
-    "        g = y/g\n",
+    "        g = (y/g+g)/2\n",
     "get_square_root(25)\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "算法给出我们解决问题的一系列机械操作。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 计算机的发展\n",
+    "## 固定程序计算机（Fixed Program Computers）\n",
+    "用于解决特定的问题的计算机：例如计算器\n",
+    "## 储存式计算机 （Stored program Computers）\n",
+    "组成：CPU ALU memory \n",
+    "basic primitives（原语）原语集中最少仅仅包括六条原语。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 编程语言的语法错误和语意错误\n",
+    "语法错误：不符合语法，程序无法执行    \n",
+    "语意错误：程序语法没问题，但是得到的结果不符合我们的预期，如出现程序崩溃，死循环，或输出不符合预期。\n",
+    "\n",
+    "- 语法Syntax：判断一个字串是否合法\n",
+    "- 静态语义Static semantics： 判断一个字串是否有意义\n",
+    "- 语义Semantics：赋予一个合法的语句意义"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 编程基础\n",
+    "低级语言：\n",
+    "高级语言：\n",
+    "- 对象Object\n",
+    "Scalar Objects（标量对象）  \n",
+    "1. int\n",
+    "2. float\n",
+    "3. bool\n",
+    "Expressions （表达式）"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
