--- a/Python/python_liaoxuefeng.ipynb
+++ b/Python/python_liaoxuefeng.ipynb
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -775,6 +775,70 @@
     "    print 'ERROR::AttributeError:'+str(e)\n",
     "else:\n",
     "    print 'PASS'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:This is warning message\n",
+      "ERROR:root:This is error message\n",
+      "CRITICAL:root:This is critical message\n"
+     ]
+    }
+   ],
+   "source": [
+    "import logging\n",
+    "logging.debug('this is debug message')\n",
+    "logging.info('This is info message')\n",
+    "logging.warning('This is warning message')\n",
+    "logging.error('This is error message')\n",
+    "logging.critical('This is critical message') #极重要的"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:This is warning message\n",
+      "root        : WARNING  This is warning message\n",
+      "root        : WARNING  This is warning message\n"
+     ]
+    }
+   ],
+   "source": [
+    "import logging\n",
+    "\n",
+    "logging.basicConfig(level=logging.DEBUG,\n",
+    "                format='%(asctime)s %(filename)s[line:%(lineno)d] %(levelname)s %(message)s',\n",
+    "                datefmt='%a, %d %b %Y %H:%M:%S',\n",
+    "                filename='myapp.log',\n",
+    "                filemode='a')\n",
+    "\n",
+    "#################################################################################################\n",
+    "#定义一个StreamHandler，将INFO级别或更高的日志信息打印到标准错误，并将其添加到当前的日志处理对象#\n",
+    "console = logging.StreamHandler()\n",
+    "console.setLevel(logging.INFO)\n",
+    "formatter = logging.Formatter('%(name)-12s: %(levelname)-8s %(message)s')\n",
+    "console.setFormatter(formatter)\n",
+    "logging.getLogger('').addHandler(console)\n",
+    "#################################################################################################\n",
+    "\n",
+    "logging.debug('This is debug message')\n",
+    "logging.info('This is info message')\n",
+    "logging.warning('This is warning message')"
    ]
   }
  ],
