--- a/Python/python_liaoxuefeng.ipynb
+++ b/Python/python_liaoxuefeng.ipynb
@@ -840,6 +840,62 @@
     "logging.info('This is info message')\n",
     "logging.warning('This is warning message')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 面向对象的高级编程\n",
+    "## 使用__slots__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "'_ _slots_ _'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'GGStudent' object has no attribute 'b'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-45-eff40b748d51>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0mgg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0mgg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m \u001b[0mgg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'GGStudent' object has no attribute 'b'"
+     ]
+    }
+   ],
+   "source": [
+    "class Student(object):\n",
+    "    __slots__ = ('score','name','age')\n",
+    "    def __init__(self,score,name,age):\n",
+    "        self.score = score\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "    def set_age(self,age):\n",
+    "        self.age = age\n",
+    "        \n",
+    "s = Student(23,'Howie',24)\n",
+    "class GraduateStudent(Student):\n",
+    "    pass\n",
+    "g = GraduateStudent(23,'aas','www')\n",
+    "g.css = 10\n",
+    "g.css\n",
+    "class GGStudent(Student):\n",
+    "    __slots__ = ('a')\n",
+    "gg = GGStudent(1,\"2\",3)\n",
+    "gg.a = 10\n",
+    "gg.a\n",
+    "gg.b = 2"
+   ]
   }
  ],
  "metadata": {
